Version 2.02.177 -
====================================
  Command will lock memory only when suspending volumes.
  Merge segments when pvmove is finished.
  Remove label_verify that has never been used.
  Ensure very large numbers used as arguments are not casted to lower values. 
  Enhance reading and validation of options stripes and stripes_size.
  Fix printing of default stripe size when user is not using stripes.
  Activation code for pvmove automatically discovers holding LVs for resume.
  Make a pvmove LV locking holder.
  Do not change critical section counter on resume path without real resume.
  Enhance activation code to automatically suspend pvmove participants.
  Prevent conversion of thin volumes to snapshot origin when lvmlockd is used.
  Correct the steps to change lock type in lvmlockd man page.
  Retry lock acquisition on recognized sanlock errors.
  Fix lock manager error codes in lvmlockd.
  Remove unnecessary single read from lvmdiskscan.
  Check raid reshape flags in vg_validate().
  Add support for pvmove of cache and snapshot origins.
  Avoid using precommitted metadata for suspending pvmove tree.
  Ehnance pvmove locking.
  Deactivate activated LVs on error path when pvmove activation fails.
  Add "io" to log/debug_classes for logging low-level I/O.
  Eliminate redundant nested VG metadata in VG struct.
  Avoid importing persistent filter in vgscan/pvscan/vgrename.
  Fix memleak of string buffer when vgcfgbackup runs in secure mode.
  Do not print error when clvmd cannot find running clvmd.
  Prevent start of new merge of snapshot if origin is already being merged.
  Fix offered type for raid6_n_6 to raid5 conversion (raid5_n).
  Deactivate sub LVs when removing unused cache-pool.
  Do not take backup with suspended devices.
  Avoid RAID4 activation on incompatible kernels under all circumstances.
  Reject conversion request to striped/raid0 on 2-legged raid4/5.

Version 2.02.176 - 3rd November 2017
====================================