@@ -61,7 +61,7 @@ int dev_is_swap(struct device *dev, uint64_t *offset_found)
 		if (size < (page >> SECTOR_SHIFT))
 			break;
 		if (!dev_read(dev, page - SIGNATURE_SIZE,
-			      SIGNATURE_SIZE, buf)) {
+			      SIGNATURE_SIZE, DEV_IO_SIGNATURES, buf)) {
 			ret = -1;
 			break;
 		}
