@@ -5771,7 +5771,7 @@ do_command:
 				continue;
 			}
 
-			if (!dev_set(pv->dev, UINT64_C(0), (size_t) 2048, 0)) {
+			if (!dev_set(pv->dev, UINT64_C(0), (size_t) 2048, DEV_IO_LABEL, 0)) {
 				log_error("%s not wiped: aborting.", pv_name);
 				if (!dev_close(pv->dev))
 					stack;
